mode some css selectors more specific, and fixed another dead igem whitespace

--- a/wiki/page_templates/reference/global_basic.css
+++ b/wiki/page_templates/reference/global_basic.css
@@ -10,14 +10,14 @@
     src: url("https://2021.igem.org/wiki/images/d/db/T--Uppsala--Ubuntu-Medium.ttf");
 }
 
-*{
+* {
     margin:0;
     border:0;
     padding:0;
     font-family: sans-serif;
 }
 
-*{
+* {
     --text-size-regular:1.85vh;
 
     --sidebar-header:3.5vh;
@@ -34,11 +34,11 @@
 
 
 
-a,a:visited{
+#pagecontent a, #pagecontent a:visited, #navigation_bar a, #navigation_bar a:visited{
     text-decoration: none;
     color: #6d1d23;
 }
-a:hover{
+#pagecontent a:hover, #navigation_bar a:hover{
     text-decoration: underline;
     color: #426968;
 }
@@ -49,7 +49,7 @@ body, html{
     scroll-behavior: smooth;
 }
 
-hr{
+#pagecontent hr{
     height: 1px;
     background-color: #6d1d23;
     display: block;
@@ -57,6 +57,6 @@ hr{
     margin-top: 2vh;
     margin-bottom: 2vh;
 }
-.blurred_image_overlay,.blurred_navigation_bar_open{
+#image_overlay .blurred_image_overlay,#navigation_bar .blurred_navigation_bar_open{
     filter:blur(15px);
 }
